--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </nav>
     <section id="home">
         <h1 class="h-primary">welcome to VARUNRAHUL ONLINE MEALS</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Soluta amet aut dolorum odio et.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            </p>
+        <p>Whoa, Whoa, Whoa
+Don’t leave so soon! Good food awaits you….</p>
+<!--         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            </p> -->
         <button class = "btn">Order Now</button>
     </section>
     <section class="services-container">
